--- a/app/src/main/res/layout/savings_fragment.xml
+++ b/app/src/main/res/layout/savings_fragment.xml
@@ -422,6 +422,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <TextView
+                            android:id="@+id/tv_total_label"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
