--- a/app/src/main/res/layout/book_room_activity.xml
+++ b/app/src/main/res/layout/book_room_activity.xml
@@ -91,7 +91,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Chọn ngày thuê phòng"
+                    android:hint="Nhập ngày thuê phòng"
                     app:boxBackgroundColor="#eeeeee"
                     app:boxCornerRadiusBottomEnd="20dp"
                     app:boxCornerRadiusBottomStart="20dp"
@@ -108,6 +108,7 @@
                         android:drawableStart="@drawable/outline_calendar_month_24"
                         android:drawablePadding="10dp"
                         android:text="2026-02-15"
+                        android:inputType="date"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -115,7 +116,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Chọn ngày trả phòng"
+                    android:hint="Nhập ngày trả phòng"
                     app:boxBackgroundColor="#eeeeee"
                     app:boxCornerRadiusBottomEnd="20dp"
                     app:boxCornerRadiusBottomStart="20dp"
@@ -132,6 +133,7 @@
                         android:drawableStart="@drawable/outline_calendar_month_24"
                         android:drawablePadding="10dp"
                         android:text="2026-02-16"
+                        android:inputType="date"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
