fix UI home customer, empty notification book room, add account customer in officer

--- a/app/src/main/res/layout/book_room_list.xml
+++ b/app/src/main/res/layout/book_room_list.xml
@@ -59,11 +59,10 @@
             android:id="@+id/textNotification"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Khồng tìm thấy khách sạn phù hợp"
-            android:textSize="20dp"
-            android:gravity="center"
             android:layout_marginVertical="20dp"
-            />
+            android:gravity="center"
+            android:text="Không tìm thấy khách sạn phù hợp"
+            android:textSize="20dp" />
     </LinearLayout>
 
 
