--- a/app/src/main/res/layout/home_customer_activity.xml
+++ b/app/src/main/res/layout/home_customer_activity.xml
@@ -96,7 +96,7 @@
         
         
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             >
@@ -118,16 +118,18 @@
 
             </androidx.cardview.widget.CardView>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                />
+<!--            <View-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="1dp"-->
+<!--                android:layout_weight="1"-->
+<!--                />-->
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="36dp">
+                app:cardCornerRadius="36dp"
+                android:layout_marginStart="40dp"
+                >
 
                 <ImageView
                     android:id="@+id/transfer"
@@ -135,20 +137,20 @@
                     android:layout_height="wrap_content"
                     android:src="@mipmap/ic_transfer_outside"
                     />
-
-
             </androidx.cardview.widget.CardView>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                />
+<!--            <View-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="1dp"-->
+<!--                android:layout_weight="1"-->
+<!--                />-->
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="36dp">
+                app:cardCornerRadius="36dp"
+                android:layout_marginStart="40dp"
+                >
 
                 <ImageView
                     android:id="@+id/utility"
@@ -156,13 +158,11 @@
                     android:layout_height="wrap_content"
                     android:src="@mipmap/ic_utility"
                     />
-
-
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginTop="20dp"
@@ -184,16 +184,17 @@
 
             </androidx.cardview.widget.CardView>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                />
+<!--            <View-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="1dp"-->
+<!--                android:layout_weight="1"-->
+<!--                />-->
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="36dp"
+                android:layout_marginStart="40dp"
                 >
 
                 <ImageView
@@ -202,20 +203,19 @@
                     android:layout_height="wrap_content"
                     android:src="@mipmap/ic_deposit_phone"
                     />
-
-
             </androidx.cardview.widget.CardView>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                />
+<!--            <View-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="1dp"-->
+<!--                android:layout_weight="1"-->
+<!--                />-->
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="36dp"
+                android:layout_marginStart="40dp"
                 >
 
                 <ImageView
