--- a/app/src/main/res/layout/receipt_payment_activity.xml
+++ b/app/src/main/res/layout/receipt_payment_activity.xml
@@ -69,7 +69,7 @@
             android:id="@+id/textReceipt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Không có hóa đơn cần thành toán"
+            android:text="Không có hóa đơn cần thanh toán"
             android:textSize="20dp"
             android:layout_gravity="center"
             android:layout_marginVertical="20dp"
