--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -71,142 +71,184 @@
                     style="@style/Style.App.TextView.TransferLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="4dp"
                     android:text="Họ và tên" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Style.App.TextInputLayout.Transfer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="16dp"
+                    app:boxBackgroundColor="#EEEEEE"
+                    app:boxCornerRadiusTopStart="16dp"
+                    app:boxCornerRadiusTopEnd="16dp"
+                    app:boxCornerRadiusBottomStart="16dp"
+                    app:boxCornerRadiusBottomEnd="16dp"
+                    app:boxStrokeWidth="0dp"
+                    android:hint="Nhập họ và tên">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_fullname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
                         android:fontFamily="@font/adamina"
-                        android:hint="Nhập họ và tên"
                         android:textColor="@color/aspire_dark_text"
                         android:inputType="textPersonName"
-                        android:paddingVertical="12dp"/>
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     style="@style/Style.App.TextView.TransferLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="4dp"
                     android:text="Tên đăng nhập" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Style.App.TextInputLayout.Transfer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="16dp"
+                    app:boxBackgroundColor="#EEEEEE"
+                    app:boxCornerRadiusTopStart="16dp"
+                    app:boxCornerRadiusTopEnd="16dp"
+                    app:boxCornerRadiusBottomStart="16dp"
+                    app:boxCornerRadiusBottomEnd="16dp"
+                    app:boxStrokeWidth="0dp"
+                    android:hint="Tạo username">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
                         android:fontFamily="@font/adamina"
-                        android:hint="Tạo username"
                         android:textColor="@color/aspire_dark_text"
-                        android:paddingVertical="12dp"/>
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     style="@style/Style.App.TextView.TransferLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="4dp"
                     android:text="Email" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Style.App.TextInputLayout.Transfer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="16dp"
+                    app:boxBackgroundColor="#EEEEEE"
+                    app:boxCornerRadiusTopStart="16dp"
+                    app:boxCornerRadiusTopEnd="16dp"
+                    app:boxCornerRadiusBottomStart="16dp"
+                    app:boxCornerRadiusBottomEnd="16dp"
+                    app:boxStrokeWidth="0dp"
+                    android:hint="example@email.com">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
                         android:fontFamily="@font/adamina"
-                        android:hint="example@email.com"
                         android:textColor="@color/aspire_dark_text"
                         android:inputType="textEmailAddress"
-                        android:paddingVertical="12dp"/>
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     style="@style/Style.App.TextView.TransferLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="4dp"
                     android:text="Số điện thoại" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Style.App.TextInputLayout.Transfer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="16dp"
+                    app:boxBackgroundColor="#EEEEEE"
+                    app:boxCornerRadiusTopStart="16dp"
+                    app:boxCornerRadiusTopEnd="16dp"
+                    app:boxCornerRadiusBottomStart="16dp"
+                    app:boxCornerRadiusBottomEnd="16dp"
+                    app:boxStrokeWidth="0dp"
+                    android:hint="09xxxxxxxx">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
                         android:fontFamily="@font/adamina"
-                        android:hint="09xxxxxxxx"
                         android:textColor="@color/aspire_dark_text"
                         android:inputType="phone"
-                        android:paddingVertical="12dp"/>
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     style="@style/Style.App.TextView.TransferLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="4dp"
                     android:text="Ngày sinh" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Style.App.TextInputLayout.Transfer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="16dp"
+                    app:boxBackgroundColor="#EEEEEE"
+                    app:boxCornerRadiusTopStart="16dp"
+                    app:boxCornerRadiusTopEnd="16dp"
+                    app:boxCornerRadiusBottomStart="16dp"
+                    app:boxCornerRadiusBottomEnd="16dp"
+                    app:boxStrokeWidth="0dp"
+                    android:hint="DD/MM/YYYY">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_birthday"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
                         android:fontFamily="@font/adamina"
-                        android:hint="DD/MM/YYYY"
                         android:textColor="@color/aspire_dark_text"
                         android:inputType="date"
-                        android:paddingVertical="12dp"/>
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     style="@style/Style.App.TextView.TransferLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="4dp"
                     android:text="Địa chỉ" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Style.App.TextInputLayout.Transfer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="16dp"
+                    app:boxBackgroundColor="#EEEEEE"
+                    app:boxCornerRadiusTopStart="16dp"
+                    app:boxCornerRadiusTopEnd="16dp"
+                    app:boxCornerRadiusBottomStart="16dp"
+                    app:boxCornerRadiusBottomEnd="16dp"
+                    app:boxStrokeWidth="0dp"
+                    android:hint="Nhập địa chỉ">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
                         android:fontFamily="@font/adamina"
-                        android:hint="Nhập địa chỉ"
                         android:textColor="@color/aspire_dark_text"
-                        android:paddingVertical="12dp"/>
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
@@ -229,6 +271,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/adamina"
                         android:text="Nam"
+                        android:checked="true"
                         android:layout_marginEnd="24dp"/>
 
                     <RadioButton
@@ -243,7 +286,7 @@
                     style="@style/Style.App.TextView.TransferLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="4dp"
                     android:text="Mật khẩu" />
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -251,22 +294,31 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    app:passwordToggleEnabled="true"> <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/adamina"
-                    android:hint="******"
-                    android:textColor="@color/aspire_dark_text"
-                    android:inputType="textPassword"
-                    android:paddingVertical="12dp"/>
+                    app:boxBackgroundColor="#EEEEEE"
+                    app:boxCornerRadiusTopStart="16dp"
+                    app:boxCornerRadiusTopEnd="16dp"
+                    app:boxCornerRadiusBottomStart="16dp"
+                    app:boxCornerRadiusBottomEnd="16dp"
+                    app:boxStrokeWidth="0dp"
+                    app:passwordToggleEnabled="true"
+                    android:hint="******">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:fontFamily="@font/adamina"
+                        android:textColor="@color/aspire_dark_text"
+                        android:inputType="textPassword"
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     style="@style/Style.App.TextView.TransferLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="4dp"
                     android:text="Nhập lại mật khẩu" />
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -274,17 +326,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="24dp"
-                    app:passwordToggleEnabled="true">
+                    app:boxBackgroundColor="#EEEEEE"
+                    app:boxCornerRadiusTopStart="16dp"
+                    app:boxCornerRadiusTopEnd="16dp"
+                    app:boxCornerRadiusBottomStart="16dp"
+                    app:boxCornerRadiusBottomEnd="16dp"
+                    app:boxStrokeWidth="0dp"
+                    app:passwordToggleEnabled="true"
+                    android:hint="******">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_re_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
                         android:fontFamily="@font/adamina"
-                        android:hint="******"
                         android:textColor="@color/aspire_dark_text"
                         android:inputType="textPassword"
-                        android:paddingVertical="12dp"/>
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.button.MaterialButton
