--- a/app/src/main/res/layout/transfer_success_activity.xml
+++ b/app/src/main/res/layout/transfer_success_activity.xml
@@ -15,7 +15,6 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
-
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -152,46 +151,47 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_continue_transaction"
                 style="@style/Style.App.Button.Success"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Tiếp tục giao dịch"
                 android:textColor="@color/aspire_dark_text"
                 android:textAllCaps="false"
-                android:textSize="14sp"
-                android:layout_marginTop="24dp"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintEnd_toStartOf="@+id/btn_save_image"
+                android:textSize="13sp"
+                android:paddingHorizontal="2dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="4dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/label_content" />
+                app:layout_constraintEnd_toStartOf="@+id/btn_save_image"
+                app:layout_constraintTop_toBottomOf="@id/tv_content" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_save_image"
                 style="@style/Style.App.Button.Success"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Lưu hình ảnh"
                 android:textColor="@color/aspire_dark_text"
                 android:textAllCaps="false"
-                android:textSize="14sp"
-                android:layout_marginStart="8dp"
+                android:textSize="13sp"
+                android:paddingHorizontal="2dp"
+                android:layout_marginStart="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/btn_continue_transaction"
-                app:layout_constraintTop_toTopOf="@id/btn_continue_transaction" />
+                app:layout_constraintStart_toEndOf="@+id/btn_continue_transaction"
+                app:layout_constraintTop_toTopOf="@+id/btn_continue_transaction" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_go_home"
                 style="@style/Style.App.Button.Success"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Trang chủ"
                 android:textColor="@color/aspire_dark_text"
                 android:textAllCaps="false"
                 android:textSize="14sp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_continue_transaction" />
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
